# twitch_irc_bot

./: .gitignore  .gitmodules  00_load_json.cpp  01_console_bot.cpp  02_ui_bot.cpp  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
working/twitch/: credentials.store  credentials.tmpl
